[tool.poetry]
name = "project-10-1"
version = "0.1.0"
description = ""
authors = ["Dmitrii Grechko <prime.optimys@mail.ru>"]
readme = "README.md"
packages = [{include = "project_10"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
