[tool.poetry]
name = "project-10-1"
version = "0.1.0"
description = ""
authors = ["Dmitrii Grechko <prime.optimys@mail.ru>"]
readme = "README.md"
packages = [{include = "project_10"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
